clang/test/CIR/IR/invalid-atomic.cir
// RUN: cir-opt %s -verify-diagnostics -split-input-file

!s32i = !cir.int<s, 32>

cir.func @f1(%ptr: !cir.ptr<!s32i>, %expected: !s32i, %desired: !s32i) {
  // expected-error @below {{custom op 'cir.atomic.cmpxchg' expected valid keyword}}
  %0, %1 = cir.atomic.cmpxchg %ptr, %expected, %desired : (!cir.ptr<!s32i>, !s32i, !s32i) -> (!s32i, !cir.bool)
  cir.return
}

// -----

!s32i = !cir.int<s, 32>

cir.func @f2(%ptr: !cir.ptr<!s32i>, %expected: !s32i, %desired: !s32i) {
  // expected-error @below {{unknown memory order "relax"}}
  %0, %1 = cir.atomic.cmpxchg relax %ptr, %expected, %desired : (!cir.ptr<!s32i>, !s32i, !s32i) -> (!s32i, !cir.bool)
  cir.return
}

// -----

!s32i = !cir.int<s, 32>

cir.func @f3(%ptr: !cir.ptr<!s32i>, %expected: !s32i, %desired: !s32i) {
  // expected-error @below {{custom op 'cir.atomic.cmpxchg' expected 'failure'}}
  %0, %1 = cir.atomic.cmpxchg success(relaxed) %ptr, %expected, %desired : (!cir.ptr<!s32i>, !s32i, !s32i) -> (!s32i, !cir.bool)
  cir.return
}
